--- a/S04 - Text Classification/BLU09 - Information Extraction/Exercise notebook.ipynb
+++ b/S04 - Text Classification/BLU09 - Information Extraction/Exercise notebook.ipynb
@@ -292,7 +292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "525ea4f3ee894a95b98d76270ac33ee3",
+       "model_id": "20cf71c7c9474a388642a6f5c40cd041",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "bc10835e",
    "metadata": {
     "deletable": false,
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "id": "acb93e53",
    "metadata": {
     "deletable": false,
@@ -1333,7 +1333,7 @@
        "[5000 rows x 6 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "id": "5ff5b354",
    "metadata": {
     "deletable": false,
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "726e0bf1",
    "metadata": {
     "deletable": false,
@@ -1421,20 +1421,41 @@
    },
    "outputs": [],
    "source": [
-    "# text_pipe = Pipeline([...])\n",
-    "# nb_adj_adv_pipe = Pipeline([...])\n",
-    "# nb_words_pipe = Pipeline([...])\n",
-    "# doc_length_pipe = Pipeline([...])\n",
-    "# avg_word_length_pipe = Pipeline([...])\n",
-    "# feats = FeatureUnion(...)\n",
+    "text_pipe = Pipeline([\n",
+    "                ('selector', TextSelector(key='text')),\n",
+    "                ('tfidf', TfidfVectorizer())])\n",
+    "nb_adj_adv_pipe = Pipeline([\n",
+    "                ('selector', NumberSelector(key='nb_adj_adv')),\n",
+    "                ('standard', StandardScaler())])\n",
+    "nb_words_pipe = Pipeline([\n",
+    "                ('selector', NumberSelector(key='nb_words')),\n",
+    "                ('standard', StandardScaler())])\n",
+    "doc_length_pipe = Pipeline([\n",
+    "                ('selector', NumberSelector(key='doc_length')),\n",
+    "                ('standard', StandardScaler())])\n",
+    "avg_word_length_pipe = Pipeline([\n",
+    "                ('selector', NumberSelector(key='avg_word_length')),\n",
+    "                ('standard', StandardScaler())])\n",
+    "\n",
+    "feats = FeatureUnion([('text', text_pipe), \n",
+    "                      ('nb_adj_adv', nb_adj_adv_pipe),\n",
+    "                      ('nb_words', nb_words_pipe),\n",
+    "                      ('doc_length', doc_length_pipe),\n",
+    "                      ('avg_word_length', avg_word_length_pipe)])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "402bc439",
    "metadata": {
     "deletable": false,
@@ -1486,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "d431c958",
    "metadata": {
     "deletable": false,
@@ -1507,19 +1528,24 @@
     "    Don't forget to add the feats to the Pipeline!\n",
     "    \"\"\"\n",
     "    \n",
-    "    # pipe = (...)\n",
-    "    # pipe.fit(...)\n",
-    "    # (...)\n",
+    "    pipe = Pipeline([\n",
+    "                    ('features', feats),\n",
+    "                    ('classifier', RandomForestClassifier())])\n",
+    "\n",
+    "    pipe.fit(X_train, y_train)\n",
     "    \n",
+    "    y_pred = pipe.predict(X_test)\n",
+    "    \n",
+    "    acc = accuracy_score(y_test, y_pred)\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    return pipe, acc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "04da0430",
    "metadata": {
     "deletable": false,
