--- a/S05 - Recommender Systems/BLU10 - Non-personalised recommender systems/Exercise notebook.ipynb
+++ b/S05 - Recommender Systems/BLU10 - Non-personalised recommender systems/Exercise notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -126,7 +126,82 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>User-ID</th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>Book-Rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1155</td>\n",
+       "      <td>0451402103</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1155</td>\n",
+       "      <td>0671689231</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1155</td>\n",
+       "      <td>0671032658</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1155</td>\n",
+       "      <td>0671701053</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1155</td>\n",
+       "      <td>0451409256</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   User-ID        ISBN  Book-Rating\n",
+       "0     1155  0451402103            8\n",
+       "1     1155  0671689231            7\n",
+       "2     1155  0671032658            9\n",
+       "3     1155  0671701053            5\n",
+       "4     1155  0451409256            9"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#BookRatings\n",
     "ratings.head()"
@@ -134,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -147,7 +222,76 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>Genre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0195153448</td>\n",
+       "      <td>Social Science</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0002005018</td>\n",
+       "      <td>Actresses</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0060973129</td>\n",
+       "      <td>1940-1949</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0374157065</td>\n",
+       "      <td>Medical</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0393045218</td>\n",
+       "      <td>Design</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         ISBN           Genre\n",
+       "0  0195153448  Social Science\n",
+       "1  0002005018       Actresses\n",
+       "2  0060973129       1940-1949\n",
+       "3  0374157065         Medical\n",
+       "4  0393045218          Design"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#BooksInfo\n",
     "books_info.head()"
@@ -176,11 +320,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 108910 entries, 0 to 108909\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column       Non-Null Count   Dtype \n",
+      "---  ------       --------------   ----- \n",
+      " 0   User-ID      108910 non-null  int64 \n",
+      " 1   ISBN         108910 non-null  object\n",
+      " 2   Book-Rating  108910 non-null  int64 \n",
+      "dtypes: int64(2), object(1)\n",
+      "memory usage: 2.5+ MB\n",
+      "\n",
+      "None\n",
+      "Book ratings count:\n",
+      "8     25319\n",
+      "10    22582\n",
+      "9     18157\n",
+      "7     17828\n",
+      "5     12529\n",
+      "6      8391\n",
+      "4      1832\n",
+      "3      1287\n",
+      "2       616\n",
+      "1       369\n",
+      "Name: Book-Rating, dtype: int64\n",
+      "Duplicates:\n",
+      "0\n",
+      "Books NA values:\n",
+      "False    95427\n",
+      "True     16914\n",
+      "Name: Genre, dtype: int64\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "### Your answer"
+    "### Your answer\n",
+    "print(\n",
+    "f'''\n",
+    "{ratings.info()}\n",
+    "Book ratings count:\n",
+    "{ratings['Book-Rating'].value_counts()}\n",
+    "Duplicates:\n",
+    "{len(ratings)-len(ratings.drop_duplicates())}\n",
+    "Books NA values:\n",
+    "{books_info.Genre.isna().value_counts()}\n",
+    "'''\n",
+    ")"
    ]
   },
   {
@@ -221,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -233,9 +426,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'We have 5693 users and 47711 items.'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def make_ratings(data):\n",
+    "def make_ratings(data: pd.DataFrame):\n",
     "    \"\"\"\n",
     "    Parameters\n",
     "        data - the ratings dataframe with ratings per ISBN and User-ID\n",
@@ -248,7 +452,9 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    data['Book-Rating'] = data['Book-Rating'].astype('int8')\n",
+    "    data = data.pivot(columns='ISBN', index='User-ID', values='Book-Rating').fillna(0)\n",
+    "    return data.values\n",
     "\n",
     "R = make_ratings(ratings)\n",
     "\n",
@@ -271,7 +477,19 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/xjrr/batch6-workspace/S05 - Recommender Systems/BLU10 - Non-personalised recommender systems/Exercise notebook.ipynb Cell 13\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S05%20-%20Recommender%20Systems/BLU10%20-%20Non-personalised%20recommender%20systems/Exercise%20notebook.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39massert\u001b[39;00m hashlib\u001b[39m.\u001b[39msha256(\u001b[39mstr\u001b[39m(R\u001b[39m.\u001b[39mshape)\u001b[39m.\u001b[39mencode())\u001b[39m.\u001b[39mhexdigest() \u001b[39m==\u001b[39m expected_hash\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S05%20-%20Recommender%20Systems/BLU10%20-%20Non-personalised%20recommender%20systems/Exercise%20notebook.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m expected_hash_1 \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m0729c13ebd725201c1445a00c825237d305ff650cd72f50e45259bd942a75ef4\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S05%20-%20Recommender%20Systems/BLU10%20-%20Non-personalised%20recommender%20systems/Exercise%20notebook.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39massert\u001b[39;00m hashlib\u001b[39m.\u001b[39msha256(\u001b[39mstr\u001b[39m(R[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39msum())\u001b[39m.\u001b[39mencode())\u001b[39m.\u001b[39mhexdigest() \u001b[39m==\u001b[39m expected_hash_1\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S05%20-%20Recommender%20Systems/BLU10%20-%20Non-personalised%20recommender%20systems/Exercise%20notebook.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m expected_hash_2 \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mf1e42019aecc858ffbcca7fddec511b761b474916fde37b1a6ff321a9b459330\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S05%20-%20Recommender%20Systems/BLU10%20-%20Non-personalised%20recommender%20systems/Exercise%20notebook.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39massert\u001b[39;00m hashlib\u001b[39m.\u001b[39msha256(\u001b[39mstr\u001b[39m(R[:,\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39msum())\u001b[39m.\u001b[39mencode())\u001b[39m.\u001b[39mhexdigest() \u001b[39m==\u001b[39m expected_hash_2\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "expected_hash = '226ef8abe773e3aceec1c057383c1628959c25882846e686412ef7e1ff96873d'\n",
     "assert hashlib.sha256(str(R.shape).encode()).hexdigest() == expected_hash\n",
@@ -1238,7 +1456,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "blu10",
    "language": "python",
    "name": "python3"
   },
@@ -1252,7 +1470,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f68244e9f982b1ff8dd8252425294533f8e984303c069c109343bc59001d143d"
+   }
   }
  },
  "nbformat": 4,
