--- a/S05 - Recommender Systems/BLU10 - Non-personalised recommender systems/Exercise notebook.ipynb
+++ b/S05 - Recommender Systems/BLU10 - Non-personalised recommender systems/Exercise notebook.ipynb
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -477,19 +477,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/xjrr/batch6-workspace/S05 - Recommender Systems/BLU10 - Non-personalised recommender systems/Exercise notebook.ipynb Cell 13\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S05%20-%20Recommender%20Systems/BLU10%20-%20Non-personalised%20recommender%20systems/Exercise%20notebook.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39massert\u001b[39;00m hashlib\u001b[39m.\u001b[39msha256(\u001b[39mstr\u001b[39m(R\u001b[39m.\u001b[39mshape)\u001b[39m.\u001b[39mencode())\u001b[39m.\u001b[39mhexdigest() \u001b[39m==\u001b[39m expected_hash\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S05%20-%20Recommender%20Systems/BLU10%20-%20Non-personalised%20recommender%20systems/Exercise%20notebook.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m expected_hash_1 \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m0729c13ebd725201c1445a00c825237d305ff650cd72f50e45259bd942a75ef4\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S05%20-%20Recommender%20Systems/BLU10%20-%20Non-personalised%20recommender%20systems/Exercise%20notebook.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39massert\u001b[39;00m hashlib\u001b[39m.\u001b[39msha256(\u001b[39mstr\u001b[39m(R[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39msum())\u001b[39m.\u001b[39mencode())\u001b[39m.\u001b[39mhexdigest() \u001b[39m==\u001b[39m expected_hash_1\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S05%20-%20Recommender%20Systems/BLU10%20-%20Non-personalised%20recommender%20systems/Exercise%20notebook.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m expected_hash_2 \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mf1e42019aecc858ffbcca7fddec511b761b474916fde37b1a6ff321a9b459330\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S05%20-%20Recommender%20Systems/BLU10%20-%20Non-personalised%20recommender%20systems/Exercise%20notebook.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39massert\u001b[39;00m hashlib\u001b[39m.\u001b[39msha256(\u001b[39mstr\u001b[39m(R[:,\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39msum())\u001b[39m.\u001b[39mencode())\u001b[39m.\u001b[39mhexdigest() \u001b[39m==\u001b[39m expected_hash_2\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "expected_hash = '226ef8abe773e3aceec1c057383c1628959c25882846e686412ef7e1ff96873d'\n",
     "assert hashlib.sha256(str(R.shape).encode()).hexdigest() == expected_hash\n",
@@ -521,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -537,7 +525,7 @@
    "source": [
     "from scipy.sparse import csr_matrix\n",
     "\n",
-    "def get_csr(matrix):\n",
+    "def get_csr(matrix: np.ndarray):\n",
     "    \"\"\"\n",
     "    Parameters\n",
     "        matrix - The Ratings Matrix.\n",
@@ -548,14 +536,15 @@
     "    \"\"\"\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "    return csr_matrix(matrix)\n",
     "    \n",
     "sparse_mat = get_csr(R)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -595,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -607,7 +596,18 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The Density Score is 0.0004009664679853458.'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_density_score(matrix):\n",
     "    \"\"\"\n",
@@ -618,7 +618,8 @@
     "        dense_score - (float) Density Score of Orig Matrix. \n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "    return matrix[matrix.nonzero()].size / matrix.size\n",
     "    \n",
     "dense_score = get_density_score(R)\n",
     "f\"The Density Score is {dense_score}.\""
@@ -626,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1470,11 +1471,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
-    "hash": "f68244e9f982b1ff8dd8252425294533f8e984303c069c109343bc59001d143d"
+    "hash": "ca1723bad4c59028e67d098733ddec8a6029aa254dd7ecb16fc6f86a123026fd"
    }
   }
  },
