--- a/S05 - Recommender Systems/BLU10 - Non-personalised recommender systems/Exercise notebook.ipynb
+++ b/S05 - Recommender Systems/BLU10 - Non-personalised recommender systems/Exercise notebook.ipynb
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -716,9 +716,90 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>User-ID</th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>Book-Rating</th>\n",
+       "      <th>Genre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1155</td>\n",
+       "      <td>0451402103</td>\n",
+       "      <td>8</td>\n",
+       "      <td>True Crime</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1155</td>\n",
+       "      <td>0671689231</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Biography &amp; Autobiography</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>70052</td>\n",
+       "      <td>0671689231</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Biography &amp; Autobiography</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>98904</td>\n",
+       "      <td>0671689231</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Biography &amp; Autobiography</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>110029</td>\n",
+       "      <td>0671689231</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Biography &amp; Autobiography</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   User-ID        ISBN  Book-Rating                      Genre\n",
+       "0     1155  0451402103            8                 True Crime\n",
+       "1     1155  0671689231            7  Biography & Autobiography\n",
+       "2    70052  0671689231            7  Biography & Autobiography\n",
+       "3    98904  0671689231            6  Biography & Autobiography\n",
+       "4   110029  0671689231            8  Biography & Autobiography"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def get_book_ratings_df(ratings_, books_info_):\n",
+    "def get_book_ratings_df(ratings_: pd.DataFrame, books_info_: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Parameters\n",
     "        ratings_ - DataFrame\n",
@@ -729,7 +810,8 @@
     "    \"\"\"\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "    return pd.merge(ratings, books_info, how='inner')\n",
     "\n",
     "book_ratings = get_book_ratings_df(ratings, books_info)\n",
     "book_ratings.head()"
@@ -737,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -808,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -833,14 +915,15 @@
     "    \"\"\"\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "    return df.groupby('ISBN').size().sort_values(ascending=False).head(n).index.to_list()\n",
     "\n",
     "top_5_popular_books = get_popular_books(ratings, 5)   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -906,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -920,7 +1003,7 @@
    },
    "outputs": [],
    "source": [
-    "def get_topn_rates(data, n, k):\n",
+    "def get_topn_rates(data: pd.DataFrame, n: int, k: int):\n",
     "    \"\"\"\n",
     "    Parameters\n",
     "        data - DataFrame with ratings\n",
@@ -932,14 +1015,22 @@
     "        Only consider books with more than k ratings.\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "    return (ratings\n",
+    "                .groupby('ISBN')\n",
+    "                .agg(book_ratings_count = ('Book-Rating', 'size'), book_ratings_mean = ('Book-Rating', 'mean'))\n",
+    "                .query(f'book_ratings_count > {k}')\n",
+    "                .sort_values(by='book_ratings_mean', ascending=False)\n",
+    "                .head(n)\n",
+    "                .index\n",
+    "                .to_list())\n",
     "    \n",
     "top5_rates = get_topn_rates(ratings, 5, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1005,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1019,7 +1110,7 @@
    },
    "outputs": [],
    "source": [
-    "def get_loyal_customers(df, n):\n",
+    "def get_loyal_customers(df:pd.DataFrame, n: int):\n",
     "    \"\"\"\n",
     "    Parameters\n",
     "        df - DataFrame\n",
@@ -1030,14 +1121,21 @@
     "    \"\"\"\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "    return (df\n",
+    "                .groupby('User-ID')\n",
+    "                .size()\n",
+    "                .sort_values(ascending=False)\n",
+    "                .head(n)\n",
+    "                .index\n",
+    "                .tolist())\n",
     "\n",
     "top_10_loyal_customers = get_loyal_customers(ratings, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1103,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1118,14 +1216,14 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
-    "\n",
-    "# genre_user_top_rating =  # Assign your solution to this variable "
+    "# raise NotImplementedError()\n",
+    "# genre_user_top_rating =  # Assign your solution to this variable \n",
+    "genre_user_top_rating = book_ratings.groupby('Genre').size().sort_values(ascending=False).head(1).index[0]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1216,6 +1314,129 @@
     "    raise NotImplementedError()\n",
     "\n",
     "top_books_genre = get_top1_popularity_genre(book_ratings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Genre</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Fiction</th>\n",
+       "      <td>0316666343</td>\n",
+       "      <td>238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fiction</th>\n",
+       "      <td>0312195516</td>\n",
+       "      <td>166</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fiction</th>\n",
+       "      <td>0971880107</td>\n",
+       "      <td>151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Juvenile Fiction</th>\n",
+       "      <td>059035342X</td>\n",
+       "      <td>144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fiction</th>\n",
+       "      <td>0142001740</td>\n",
+       "      <td>142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fiction</th>\n",
+       "      <td>038548609X</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fiction</th>\n",
+       "      <td>0385485670</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fiction</th>\n",
+       "      <td>0385485182</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fiction</th>\n",
+       "      <td>0385485093</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fiction</th>\n",
+       "      <td>0595287441</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>42639 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        ISBN  count\n",
+       "Genre                              \n",
+       "Fiction           0316666343    238\n",
+       "Fiction           0312195516    166\n",
+       "Fiction           0971880107    151\n",
+       "Juvenile Fiction  059035342X    144\n",
+       "Fiction           0142001740    142\n",
+       "...                      ...    ...\n",
+       "Fiction           038548609X      1\n",
+       "Fiction           0385485670      1\n",
+       "Fiction           0385485182      1\n",
+       "Fiction           0385485093      1\n",
+       "Fiction           0595287441      1\n",
+       "\n",
+       "[42639 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "book_ratings.groupby(['Genre', 'ISBN']).agg(count=('Book-Rating', 'count')).sort_values('count', ascending=False).reset_index(level=1)"
    ]
   },
   {
