--- a/S05 - Recommender Systems/BLU10 - Non-personalised recommender systems/Exercise notebook.ipynb
+++ b/S05 - Recommender Systems/BLU10 - Non-personalised recommender systems/Exercise notebook.ipynb
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -793,7 +793,7 @@
        "4   110029  0671689231            8  Biography & Autobiography"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1301,7 +1301,7 @@
    },
    "outputs": [],
    "source": [
-    "def get_top1_popularity_genre(df):\n",
+    "def get_top1_popularity_genre(df:pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Parameters\n",
     "        df - merged DataFrame with book ratings and genres\n",
@@ -1311,137 +1311,19 @@
     "    \"\"\"\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "    return (df.groupby(['Genre', 'ISBN'])\n",
+    "                .agg(count=('Book-Rating', 'count'))\n",
+    "                .reset_index().sort_values('count', ascending=False)\n",
+    "                .groupby(['Genre'])\n",
+    "                .head(1))\n",
     "\n",
     "top_books_genre = get_top1_popularity_genre(book_ratings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ISBN</th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Genre</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Fiction</th>\n",
-       "      <td>0316666343</td>\n",
-       "      <td>238</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Fiction</th>\n",
-       "      <td>0312195516</td>\n",
-       "      <td>166</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Fiction</th>\n",
-       "      <td>0971880107</td>\n",
-       "      <td>151</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Juvenile Fiction</th>\n",
-       "      <td>059035342X</td>\n",
-       "      <td>144</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Fiction</th>\n",
-       "      <td>0142001740</td>\n",
-       "      <td>142</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Fiction</th>\n",
-       "      <td>038548609X</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Fiction</th>\n",
-       "      <td>0385485670</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Fiction</th>\n",
-       "      <td>0385485182</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Fiction</th>\n",
-       "      <td>0385485093</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Fiction</th>\n",
-       "      <td>0595287441</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>42639 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        ISBN  count\n",
-       "Genre                              \n",
-       "Fiction           0316666343    238\n",
-       "Fiction           0312195516    166\n",
-       "Fiction           0971880107    151\n",
-       "Juvenile Fiction  059035342X    144\n",
-       "Fiction           0142001740    142\n",
-       "...                      ...    ...\n",
-       "Fiction           038548609X      1\n",
-       "Fiction           0385485670      1\n",
-       "Fiction           0385485182      1\n",
-       "Fiction           0385485093      1\n",
-       "Fiction           0595287441      1\n",
-       "\n",
-       "[42639 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "book_ratings.groupby(['Genre', 'ISBN']).agg(count=('Book-Rating', 'count')).sort_values('count', ascending=False).reset_index(level=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1692,11 +1574,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ca1723bad4c59028e67d098733ddec8a6029aa254dd7ecb16fc6f86a123026fd"
+    "hash": "f68244e9f982b1ff8dd8252425294533f8e984303c069c109343bc59001d143d"
    }
   }
  },
